@@ -30,6 +30,7 @@
 #include "rsvg-private.h"
 #include "rsvg-bpath-util.h"
 #include "rsvg-path.h"
+#include "rsvg-defs.h"
 
 #include <libart_lgpl/art_affine.h>
 #include <libart_lgpl/art_vpath_bpath.h>
@@ -42,6 +43,13 @@
 
 /* 4/3 * (1-cos 45)/sin 45 = 4/3 * sqrt(2) - 1 */
 #define RSVG_ARC_MAGIC ((double) 0.5522847498)
+
+struct _RsvgDefsPath {
+ 	RsvgDefVal super;
+ 	char *d;
+};
+ 
+typedef struct _RsvgDefsPath RsvgDefsPath;
 
 /**
  * rsvg_close_vpath: Close a vector path.
