@@ -1,3 +1,7 @@
+2003-03-25  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg.c: Support for <style> outside of a <defs> block
+	
 2003-03-24  Dom Lachowicz <cinamod@hotmail.com>
 
 	* gimp-plugin/svg.c: Image size/resolution dialog, allow for 
